# CSE-5100-Deep-Reinforcement-Learning

./: .gitignore
Final Project - 5100/: .gitignore  MoralRewardWrapper.py  check_versions.py  main.py  pyproject.toml  training.py  utils.py
Final Project - 5100/runs/commons_harvest__open__training__1__1765492710/: events.out.tfevents.1765492710.Rabbito-Heater.3548.0
hw1/: DRL_Solution_1.fdb_latexmk  DRL_Solution_1.fls  DRL_Solution_1.out  README.md  table_q1.xlsx
hw3/: part2.bat  pyproject.toml  run-all.bat  (+1 more)
hw3-to-submit/: Dockerfile  pyproject.toml
hw3-to-submit/data/part_1_reinforce_de_variance/pg_cartpole_lb_na_CartPole-v1_02-11-2025_17-40-08/: events.out.tfevents.1762126808.Leeky-Leaches
hw3-to-submit/data/part_1_reinforce_de_variance/pg_cartpole_lb_rtg_na_CartPole-v1_02-11-2025_18-05-23/: events.out.tfevents.1762128323.Leeky-Leaches
hw3-to-submit/data/part_1_reinforce_de_variance/pg_cartpole_na_CartPole-v1_02-11-2025_16-30-34/: events.out.tfevents.1762122634.Leeky-Leaches
hw3-to-submit/data/part_1_reinforce_de_variance/pg_cartpole_rtg_CartPole-v1_02-11-2025_19-44-47/: events.out.tfevents.1762134287.Leeky-Leaches
hw3-to-submit/data/part_2_baseline_comparisons/pg_cartpole_na_rtg_baseline_CartPole-v1_02-11-2025_21-20-00/: events.out.tfevents.1762140000.Leeky-Leaches
hw3-to-submit/data/part_2_baseline_comparisons/pg_cartpole_rtg_baseline_bgs3_CartPole-v1_02-11-2025_21-35-41/: events.out.tfevents.1762140941.Leeky-Leaches
hw3-to-submit/data/pg_cartpole_rtg_no_baseline_HalfCheetah-v4._02-11-2025_23-25-00/: events.out.tfevents.1762147500.Leeky-Leaches
hw3-to-submit/data/pg_cartpole_rtg_no_baseline_HalfCheetah-v4_02-11-2025_23-25-20/: events.out.tfevents.1762147520.Leeky-Leaches
hw3-to-submit/data/pg_halfcheetah_rtg_baseline_HalfCheetah_02-11-2025_23-02-57/: events.out.tfevents.1762146177.Leeky-Leaches
hw3-to-submit/data/pg_halfcheetah_rtg_no_baseline_HalfCheetah-v4_02-11-2025_22-42-31/: events.out.tfevents.1762144951.Leeky-Leaches
hw3-to-submit/data/pg_halfcheetah_rtg_no_baseline_HalfCheetah_02-11-2025_22-40-42/: events.out.tfevents.1762144842.Leeky-Leaches
hw3-to-submit/src/: critics.py  pg_agent.py  utils.py
(+28 files in other folders)
