[project]
name = "final-project-5100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-meltingpot>=2.4.0",
    "gymnasium>=1.2.2",
    "shimmy>=2.0.0",
    "supersuit>=3.10.0",
    "numpy<2.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pettingzoo>=1.25.0",
    "tensorboard>=2.18.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
