[project]
name = "final-project-5100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-meltingpot>=2.4.0",
    "gymnasium>=1.2.2",
    "shimmy>=2.0.0",
    "supersuit>=3.10.0",
    "numpy<2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pettingzoo>=1.25.0",
    "tensorboard>=2.18.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
