[project]
name = "hw3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control]>=1.2.1",
    "gymnasium[mujoco]>=1.2.1",
    "matplotlib>=3.10.7",
    "mujoco>=3.3.7",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
